{
  "version": 4,
  "terraform_version": "0.12.26",
  "serial": 36,
  "lineage": "c25b6699-f6cf-5df2-83f8-bc9b7ceaa587",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "MySQL",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08706cb5f68222d09",
            "arn": "arn:aws:ec2:ap-south-1:349018947514:instance/i-005fd56305b4b73a5",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-005fd56305b4b73a5",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mykey12",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-09623ac667fb68ea3",
            "private_dns": "ip-192-168-1-156.ap-south-1.compute.internal",
            "private_ip": "192.168.1.156",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-04d6d5fb756e519bb",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07941b2fdc3021d01",
            "tags": {
              "Name": "mysql"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-006275e3c9084b9dd"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_mysql",
            "aws_subnet.subnet2",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "wordpress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-000cbce3e1b899ebd",
            "arn": "arn:aws:ec2:ap-south-1:349018947514:instance/i-05a0af050cb136faa",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05a0af050cb136faa",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mykey12",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-009ef7cc237fb029d",
            "private_dns": "ip-192-168-0-82.ap-south-1.compute.internal",
            "private_ip": "192.168.0.82",
            "public_dns": "ec2-13-235-95-82.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.235.95.82",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0e4ec37decc38f609",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02e96c52dfe641673",
            "tags": {
              "Name": "wordpress"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c022cc7507b5a0d6"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_ssh",
            "aws_subnet.subnet1",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:349018947514:internet-gateway/igw-090fde9ba8674719b",
            "id": "igw-090fde9ba8674719b",
            "owner_id": "349018947514",
            "tags": {
              "Name": "tera-gw"
            },
            "vpc_id": "vpc-028a6151de73b507a"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0ced4b563992bd061",
            "owner_id": "349018947514",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-090fde9ba8674719b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "at_routetable"
            },
            "vpc_id": "vpc-028a6151de73b507a"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_public_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0891da63853492fad",
            "route_table_id": "rtb-0ced4b563992bd061",
            "subnet_id": "subnet-02e96c52dfe641673"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.rt",
            "aws_subnet.subnet1",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_mysql",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:349018947514:security-group/sg-006275e3c9084b9dd",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-006275e3c9084b9dd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "MYSQL-rule",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_mysql",
            "name_prefix": null,
            "owner_id": "349018947514",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "private_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-028a6151de73b507a"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:349018947514:security-group/sg-0c022cc7507b5a0d6",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c022cc7507b5a0d6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh",
            "name_prefix": null,
            "owner_id": "349018947514",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "public_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-028a6151de73b507a"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:349018947514:subnet/subnet-02e96c52dfe641673",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.0.0/24",
            "id": "subnet-02e96c52dfe641673",
            "map_public_ip_on_launch": true,
            "owner_id": "349018947514",
            "tags": {
              "Name": "public-subnet"
            },
            "vpc_id": "vpc-028a6151de73b507a"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:349018947514:subnet/subnet-07941b2fdc3021d01",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "192.168.1.0/24",
            "id": "subnet-07941b2fdc3021d01",
            "map_public_ip_on_launch": false,
            "owner_id": "349018947514",
            "tags": {
              "Name": "private-subnet"
            },
            "vpc_id": "vpc-028a6151de73b507a"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myvpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:349018947514:vpc/vpc-028a6151de73b507a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-056bfc8d2d7e6f063",
            "default_route_table_id": "rtb-06582fca930a7703b",
            "default_security_group_id": "sg-0244e27f1fe3ea5fe",
            "dhcp_options_id": "dopt-35bc475e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-028a6151de73b507a",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-06582fca930a7703b",
            "owner_id": "349018947514",
            "tags": {
              "Name": "tera-vpc"
            }
          }
        }
      ]
    }
  ]
}